--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="date">dd/mm/yyyy</string>
     <string name="bill_units">No. of units consumed :</string>
     <string name="units_hint">0000</string>
-    <string name="amount">Bill Amount : </string>
+    <string name="bii_amount">Bill Amount : </string>
     <string-array name="bill_year">
         <item>Select Year</item>
         <item>2020</item>
@@ -92,7 +92,192 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="update_bill_btn">Update</string>
-    <string name="update_bill_title">Update Bill</string>
+
+
+<!--    Hasaranga-->
+
+    <string name="add_item">Add Item</string>
+    <string name="plans">Plans</string>
+    <string name="plan_Name">Plan Name : </string>
+    <string name="edt_plan_Name">Edit Plan Name : </string>
+    <string name="Enter_plan_name">Enter plan name</string>
+    <string name="product_name">Product Name</string>
+    <string name="product_name_eg">Eg : Bulb</string>
+    <string name="product_place">Place Using</string>
+    <string name="product_place_eg">Eg : Bedroom</string>
+    <string name="product_watt">Power Consumption</string>
+    <string name="product_watt_eg">Eg : 20</string>
+    <string name="product_work_time">Work Time Per Day</string>
+    <string name="product_work_time_eg">Eg : 6 hours</string>
+    <string name="btn_add">Add Item</string>
+    <string name="Create_Plan">Create Plan</string>
+    <string name="Save_Plan">Save Plan</string>
+    <string name="item_desc">Bulb(Bed room)</string>
+    <string name="item_watt">20W</string>
+    <string name="plan_desc">Plan 1</string>
+    <string name="plan_price">Rs :3500</string>
+    <string name="saved_plans">Saved Plans</string>
+    <string name="amount">Amount : </string>
+    <string name="amount_price">RS. 4500.00</string>
+    <string name="amount_price1">RS. 3500.00</string>
+    <string name="bulb">Bulb</string>
+    <string name="bedroom">Bedroom</string>
+    <string name="watt">20W</string>
+    <string name="plan1">Plan 1</string>
+    <string name="work_time">6 hours</string>
+    <string name="lang">Language</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="help">Help</string>
+    <string name="about_app">About app</string>
+    <string name="title_activity_update_plans">updatePlans</string>
+    <string-array name="Hours">
+        <item>H</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+    </string-array>
+    <string-array name="minutes">
+        <item>Min</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
+        <item>41</item>
+        <item>42</item>
+        <item>43</item>
+        <item>44</item>
+        <item>45</item>
+        <item>46</item>
+        <item>47</item>
+        <item>48</item>
+        <item>49</item>
+        <item>50</item>
+        <item>51</item>
+        <item>52</item>
+        <item>53</item>
+        <item>54</item>
+        <item>55</item>
+        <item>56</item>
+        <item>57</item>
+        <item>58</item>
+        <item>59</item>
+
+    </string-array>
+    <string-array name="watt">
+        <item>W</item>
+        <item>KW</item>
+
+    </string-array>
+
+<!--    Chamikara-->
+
+    <!--Add produt page-->
+    <string name="titleAdd">Add Product</string>
+    <string name="step_1">Step 1 : Required</string>
+    <string name="step_2">Step 2 : Optional</string>
+    <string name="step_3">Step 3 : Attachments</string>
+    <string name="txt_pName">Product Name</string>
+    <string name="txt_Brand">Brand Name</string>
+    <string name="dt_purchased">Purchased Date</string>
+    <string name="wPeriod">Warranty Period</string>
+    <string name="spn_wPeriod">Select Warranty Period</string>
+    <string name="price">Price</string>
+    <string name="txt_Location">Purchased Location</string>
+    <string name="txt_phone">Phone number</string>
+    <string name="txt_email">Email Address</string>
+    <string name="txt_other">Other</string>
+    <string name="txt_image1">Upload Product Image</string>
+    <string name="txt_image2">Upload Purchased Bill</string>
+    <string name="txt_image3">Upload Warranty Copy</string>
+    <string name="btnGallery">Gallery</string>
+    <string name="btnCamera">Camera</string>
+    <string name="btnSubmit">Submit</string>
+    <string name="btnReset">Reset</string>
+
+    <!-- dashboard page   -->
+    <string name="btnActive">Active</string>
+    <string name="btnExpiring">Expiring</string>
+    <string name="btnExpired">Expired</string>
+    <string name="btnAdd_product">Add Warranty</string>
+    <string name="dashboard_head">WELCOME..!</string>
+    <string name="brSearch">Search here..</string>
+
+    <!-- view details page-->
+    <string name="pch_date">2023.03.04</string>
+    <string name="warPeriod">1 year</string>
+    <string name="proPrice">Rs. 1500.00</string>
+    <string name="address">No. 395, APL Hardware, Gonapola</string>
+    <string name="phoneNo">0112704652</string>
+    <string name="emailEx">aplhardware14@gmail.com</string>
+    <string name="updateBtn">Update</string>
+    <string name="deleteBtn">Delete</string>
+    <string name="develop">PACH Tech</string>
+    <string name="pro_details">Product Details</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="active">Active</string>
+    <string name="expiring">Expiring</string>
+    <string name="expired">Expired</string>
+    <string name="title_activity_add_product">AddProduct</string>
+    <string name="add_product">Add Product</string>
 
     //table page
     <string name="th1r1">Consumption(kWh)</string>
@@ -119,5 +304,4 @@
 
     <string name="charges_table_title">Charges structure</string>
     <string name="domestic_label">Type : Domestic</string>
-
 </resources>
